Bug fixes for FirestoreUpload breaking and Hero images displaying incorrectly
- Fixed the following bugs...
   - FirestoreUpload broke on upload because the file input value was being set to empty string. Line deleted, problem solved!
  - ALL Hero components (including those on HomePage and EventDetailsPage) showed the user's own coverImg, because the localStorage userData was first in the "priority list." The img prop is now first priority. EditProfilePage is the only page where coverImg might need to be re-rendered, so it no longer passes an img prop to its Hero component. All other instances of Hero remain unchanged.
   - Hero gradient overlay misalignment was causing a dark stripe under the hero image. Simple CSS fix: the overlay now has a max-height. (Also, .next-event's bottom position has changed from 0 to 0.65rem for better alignment.)

--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -13,7 +13,7 @@
 
     &__img {
         width: 100%;
-        // max-height: 120vh;
+        max-height: 70vh;
         object-fit: cover;
         object-position: top;
 
@@ -24,6 +24,7 @@
 
     &__gradient-overlay {
         @include gradient-overlay(180deg);
+        max-height: 70vh;
     }
 
     &__edit-button {
@@ -49,7 +50,7 @@
     background-color: rgba(0,0,0, 0.6);
     padding: 1.5rem 1rem 1rem;
     position: absolute;
-    bottom: 0;
+    bottom: 0.65rem;
     left: 0;
     width: 100%;
     text-transform: uppercase;
@@ -83,12 +84,12 @@
 .home {
     .hero {
         @include desktop {
-            max-height: 65vh;
+            max-height: 70vh;
         }
     
         &__img {
             @include desktop {
-                max-height: 65vh;
+                max-height: 70vh;
             }
     }
 }
